--- a/web.css
+++ b/web.css
@@ -1,48 +1,29 @@
-.nav-pills-custom>li>a {
-	color: lightgrey;
+.navbar {
+	margin-bottom: 0;
+	border-radius: 0;
+ }
+.row.content {height: 450px}
+.sidenav {
+	padding-top: 20px;
+	background-color: white;
+	height: 100%;
+	}
+footer {
+	background-color: #555;
+	color: white;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 15px;
 }
-
-.nav-pills-custom>li>a:focus,
-.nav-pills-custom>li>a:hover {
-	background: none;
-	color: grey;
+@media screen and (max-width: 767px) {
+.sidenav {
+	height: auto;
+	padding: 15px;
 }
-
-.panel-custom>.panel-heading {
-	background: none;
-	border-bottom: none;
+.row.content {height:auto;} 
 }
-
-.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover{
-	background-color: #337AB7;
+.navbar-default{
+	font-size: 1.8em !important;
 }
-.form-control-nav{
-	background-color:#F0FFFF;
-  border: lightgrey solid 1px;
-	border-radius:15px;
-}
-body{
-	background-color: #F0FFFF;
-}
-.navbar-default .navbar-collapse, .navbar-default{
-background-color: white;
-}
-.panel-footer{
-	background-color: lightcyan;
-}
-.well{
-	background-color: lightcyan;
-}
-a{
-	color:#60A6C1;
-}
-div.panel-heading{
-	padding-top:15px;
-	padding-bottom: 0px;
-}
-.form-control-feedback{
-	line-height:27px;
-}
-.panel-info{
-	border:1px lightgrey solid;
+.lista{
+	list-style-type: none;
 }
